am curatat un stream chain gigantic spargandu-l in variabile explanatory